Update portfolio to add link to hangman game; add to css file to size image for hangman game

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
 			<hr>
 		
 		<div class="project">
-			<img src="assets/images/200x200.png" alt="project1">
-
-			<h3>Project 1</h3>
+			<img src="assets/images/thumb-1920-592678.jpg" alt="Hangman">
+			<a href="file:///C:/Users/byrons/Desktop/Word-Guess-Game/index.html">
+			<h3>Hangman</h3></a>
 		</div>
 
 		<div class="project">
