Add crystal collector game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,14 +27,14 @@
 		
 		<div class="project">
 			<img src="assets/images/thumb-1920-592678.jpg" alt="Hangman">
-			<a href="file:///C:/Users/byrons/Desktop/Word-Guess-Game/index.html">
+			<a href="Word-Guess-Game/index.html">
 			<h3>Hangman</h3></a>
 		</div>
 
 		<div class="project">
-			<img src="assets/images/200x200.png" alt="project2">
-
-			<h3>Project 2</h3>
+			<img src="assets/images/Steven-Universe-FTR.jpg" alt="Crystal Collector">
+			<a href="https://basosa94.github.io/unit-4-game/">
+			<h3>Crystal Collector</h3></a>
 		</div>
 
 		<div class="project">
