--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 		
 		<div class="project">
 			<img src="assets/images/thumb-1920-592678.jpg" alt="Hangman">
-			<a href="Word-Guess-Game/index.html">
+			<a href="https://basosa94.github.io/Word-Guess-Game/">
 			<h3>Hangman</h3></a>
 		</div>
 
