--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,9 @@
 		</div>
 
 		<div class="project">
-			<img src="assets/images/200x200.png" alt="project3">
- 
-			<h3>Project 3</h3>
+			<img src="assets/images/BobsBurgers.jpg" alt="Trivia Game">
+			<a href="https://basosa94.github.io/TriviaGame/">
+			<h3>Trivia Game</h3>
 		</div>
 
 		<div class="project">
